# talk-pyhep-2025

./: .gitignore  LICENSE  README.md  pixi.toml
.github/workflows/: deploy.yml
book/: cuda.md  index.md  intro.md  myst.yml  pyproject-based.md  setup.md  use-examples.md
book/code/cuda/: pixi.toml
book/code/example/: pixi.toml
book/code/packaging/compiled_packaging/: .gitignore  pyproject.toml
book/code/packaging/rosen_pre_pixi/: pyproject.toml
