[build-system]
requires = [
  "scikit-build-core>=0.5.0",
  "pybind11>=2.10.0",
  ]
build-backend = "scikit_build_core.build"


[project]
name = "rosen-cpp"
dynamic = ["version"]
description = "Example package for demonstration"
readme = "README.md"
license = "MIT"
authors = [
  { name = "Matthew Feickert", email = "matthew.feickert@cern.ch" },
]
maintainers = [
  { name = "Matthew Feickert", email = "matthew.feickert@cern.ch" },
]
requires-python = ">=3.10"

dependencies = [
    "scipy>=1.14.0",
    "numpy",  # compatible versions controlled through scipy
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering :: Physics",
]

[project.urls]
Homepage = "https://github.com/matthewfeickert-talks/talk-odsl-forum-seminar-2023"
Documentation = "https://github.com/matthewfeickert-talks/talk-odsl-forum-seminar-2023"
"Bug Tracker" = "https://github.com/matthewfeickert-talks/talk-odsl-forum-seminar-2023/issues"

[tool.scikit-build]
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"

[tool.setuptools_scm]
# Ignore the commit hash in version
local_scheme = "no-local-version"
# Need to give root as we aren't at the same level as the git repo
root = "../../../.."

[[tool.scikit-build.generate]]
path = "rosen_cpp/_version.py"
template = '''
version = "${version}"
'''

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64"]

[tool.pixi.pypi-dependencies]
rosen-cpp = { path = "." }

[tool.pixi.tasks]

[tool.pixi.dependencies]
cxx-compiler = ">=1.11.0,<2"
scipy = ">=1.14.0"

[tool.pixi.feature.test.dependencies]
pytest = "*"

[tool.pixi.feature.test.tasks]
test = "pytest tests"

[tool.pixi.environments]
test = ["test"]
